2012-01-03  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* release version 0.8 on 2012-01-03 10:11:10 UTC

2012-01-03  Hendrik Tews <prooftree@askra.de>

	* prepare changes.html for release

2012-01-02  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* separate INSTALL
	* make-release update

2012-01-02  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* update README, changes, man page

2012-01-02  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* clean up copyright
	* packaging in make-release

2012-01-02  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* DESTDIR
	* copyright 2012
	* add make-release
	* add debian subdir

2012-01-02  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* protocol change: configure message required as first
	  message
	* set protocol version to 1
	* simplify Elisp communication primitives

2012-01-01  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* delete proof-full-annotation-internal (as Dave wished) (elisp only)
	* fix strange start problem

2011-12-31  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* protocol change: first fixed length line tells length
	  of second line with command

2011-12-25  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* put coq specific code into coq.ml

2011-12-21  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* new option -help-dialog
	* update builtin help man page

2011-12-21  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* handle display quit and prooftree process termination

2011-12-20  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* delete other_open_goals field from internal state

2011-12-20  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix quit problem (which makes another quit problem more
	  obvious)
	* improve evar printing

2011-12-19  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* elisp only:
	  - proof-tree-configured for protecting menu and entry
	    function
	  - send undo when leaving buffer
	  - fix proof-tree start without a proof shell

	  - simplify/clear unused code
	  - fix initialization problem
